Fix firefox hash mark misaligned

--- a/assets/content.css
+++ b/assets/content.css
@@ -418,6 +418,12 @@ h1::before, h2::before, h3::before, h4::before, h5::before {
   bottom: 0;
   font-size: 16px;
 }
+/* Firefox fix for misaligned hash link */
+@-moz-document url-prefix() {
+  .markdown-body .anchor::before {
+    top: -26px;
+  }
+}
 
 .markdown-body .anchor:focus {
   outline: none;
